--- a/app/src/main/res/layout/schedules_list.xml
+++ b/app/src/main/res/layout/schedules_list.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/valorantimage"
+                android:id="@+id/imgGameSchedule"
                 android:layout_width="wrap_content"
                 android:layout_height="125dp"
                 android:scaleType="centerCrop"
