--- a/app/src/main/res/layout/activity_what_we_play.xml
+++ b/app/src/main/res/layout/activity_what_we_play.xml
@@ -66,6 +66,7 @@
         android:id="@+id/recGame"
         android:layout_width="409dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
