--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -42,7 +42,7 @@
       android:id="@+id/imgGame"
       android:layout_width="wrap_content"
       android:layout_height="232dp"
-      android:scaleType="fitXY"
+      android:scaleType="centerCrop"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
