--- a/app/src/main/res/layout/activity_team_member.xml
+++ b/app/src/main/res/layout/activity_team_member.xml
@@ -27,7 +27,7 @@
                 app:srcCompat="@drawable/valorant" />
 
             <TextView
-                android:id="@+id/txtNameTeam"
+                android:id="@+id/txtNameGame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
