--- a/app/src/main/res/layout/game_list.xml
+++ b/app/src/main/res/layout/game_list.xml
@@ -33,7 +33,7 @@
                 tools:srcCompat="@drawable/valorant_image" />
 
             <TextView
-                android:id="@+id/txtNameTeam"
+                android:id="@+id/txtNameGame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
