--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -34,13 +34,12 @@
                 android:layout_marginEnd="48dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Team's member"
-                android:textSize="16sp" />
+                android:textSize="14dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recTeam"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 
