--- a/app/src/main/res/layout/activity_team_member.xml
+++ b/app/src/main/res/layout/activity_team_member.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".TeamMemberActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,27 +22,27 @@
 
             <ImageView
                 android:id="@+id/imgGame3"
-                android:layout_width="wrap_content"
-                android:layout_height="232dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/valorant" />
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:scaleType="fitCenter"
+                android:layout_marginTop="24dp"
+                app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <TextView
-                android:id="@+id/txtNameGame"
+                android:id="@+id/txtNameTeam"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="48dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Team's member"
-                android:textSize="16sp" />
+                android:textSize="14dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recMember"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </ScrollView>
 
